Coverity analysis defect 41387: Using invalid iterator

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A new defect has been detected and assigned to schwerin in Coverity Connect.
      http://coverity.mongodb.com//sourcebrowser.htm?projectId=10001#mergedDefectId=41387
      The defect was flagged by checker INVALIDATE_ITERATOR in
      file /src/mongo/db/repl/network_interface_impl.cpp
      function mongo::repl::NetworkInterfaceImpl::cancelCommand(const mongo::repl::ReplicationExecutor::CallbackHandle &)
      and this ticket was created by asya

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: