SERVER-15717 Fix use-after-free when logging at high log levels in replication network interface.